Fixed not responsive on mobile (touch)
also Added preivew for facebook
also added how to play

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ body{
 	width:30%;
 	line-height: 2em;
 }
+#title p{
+	margin: 0.5em;
+}
 #credits{
 	margin: 12px;
 	font-size: 16px;
